--- a/Aspert/Aspert/NewsPage.xaml
+++ b/Aspert/Aspert/NewsPage.xaml
@@ -5,7 +5,7 @@
              xmlns:aspert="clr-namespace:Aspert"
              x:Class="Aspert.NewsPage"
              x:DataType="{x:Type vm:NewsPageViewModel}">
-    <Grid BackgroundColor="{StaticResource LightGray}"
+    <Grid BackgroundColor="{StaticResource Lime}"
           RowDefinitions="*,12*,*">
         <Grid.BindingContext>
             <vm:NewsPageViewModel/>
@@ -29,58 +29,39 @@
                Aspect="Fill"
                Source="bg4_aspert.png"/>
         <!-- Contenido -->
-        <ScrollView Grid.Row="1">
-            <Grid Padding="20">
-                <!--
-                  RowDefinitions="110,50,30,Auto,50,30,Auto,50,30,Auto,50,30,Auto"
-                -->
-                <CollectionView ItemsSource="{Binding Feeds, Source={Static vm:NewsPageViewModel.Instance}}">
+        <ScrollView Grid.Row="1"
+                    Padding="20">
+            <Grid ColumnDefinitions="120,*"
+                  RowDefinitions="120,50,*">
+                <Frame BackgroundColor="{StaticResource Lime}">
+                    <Label FontAttributes="Bold" 
+                           FontSize="14"
+                           HorizontalOptions="Center"
+                           HorizontalTextAlignment="Center"
+                           Text="ÚLTIMAS NOTICIAS"
+                           TextColor="White"
+                           VerticalOptions="Center"
+                           VerticalTextAlignment="Center"/>
+                </Frame>
+                <CollectionView Grid.ColumnSpan="2"
+                                Grid.Row="2"
+                                ItemsSource="{Binding Feeds, Source={Static vm:NewsPageViewModel.Instance}}">
                     <CollectionView.ItemTemplate>
                         <DataTemplate x:DataType="{x:Type vm:Feed}">
                             <StackLayout>
-                                <Label Text="{Binding Title}"
-                                       TextColor="Black"/>
-                                <Label Text="{Binding Summary}"
-                                       TextColor="Black"
-                                       TextType="Html"/>
+                                <Label FontAttributes="Bold"
+                                       FontSize="Title"
+                                       Text="{Binding Title}"
+                                       TextColor="{StaticResource Lime}"
+                                       TextTransform="Uppercase"/>
+                                <aspert:HtmlLabel
+                                    Text="{Binding Summary}"
+                                    TextColor="Black"
+                                    TextType="Html"/>
                             </StackLayout>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
-                <!--
-                <Button Grid.Row="0" 
-                        WidthRequest="110"
-                        BackgroundColor="#3ff090"
-                        Text="ÚLTIMAS NOTICIAS"
-                        TextColor="White"
-                        FontSize="16"
-                        FontAttributes="Bold"
-                        HorizontalOptions="Start"/>
-                <Label Grid.Row="2" 
-                       Text="ALGO AQUI"
-                       TextColor="#3ff090"
-                       FontAttributes="Bold"
-                       FontSize="Title"/>
-                <Label Grid.Row="3" 
-                       Text=" text here "
-                       TextColor="#8492A6"/>
-                <Label Grid.Row="5" 
-                       Text="ALGO AQUI 2"
-                       TextColor="#3ff090"
-                       FontAttributes="Bold"
-                       FontSize="Title"/>
-                <Label Grid.Row="6" 
-                       Text="TEXT HERE "
-                       TextColor="#8492A6"/>
-                <Label Grid.Row="8" 
-                       Text="ALGO AQUI 3"
-                       TextColor="#3ff090"
-                       FontAttributes="Bold"
-                       FontSize="Title"/>
-                <Label Grid.Row="9" 
-                       Text="TEXT HERE "
-                       TextColor="#8492A6"/>
-                -->
             </Grid>
         </ScrollView>
         <!-- Configuración -->
