--- a/Aspert/Aspert/QuestionPage.xaml
+++ b/Aspert/Aspert/QuestionPage.xaml
@@ -1,12 +1,93 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Aspert.QuestionPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:vm="clr-namespace:Aspert.ViewModels"
+             xmlns:aspert="clr-namespace:Aspert"
+             x:Class="Aspert.QuestionPage"
+             x:DataType="{x:Type vm:QuestionPageViewModel}">
+    <Grid BackgroundColor="{StaticResource Purple}"
+          RowDefinitions="*,12*,*">
+        <Grid.BindingContext>
+            <vm:QuestionPageViewModel/>
+        </Grid.BindingContext>
+        <!-- Menú -->
+        <ImageButton Grid.Row="0"
+                     BackgroundColor="Transparent"
+                     Command="{Binding Push}"
+                     CommandParameter="{Type aspert:MenuPage}"
+                     HorizontalOptions="Start"
+                     Padding="10"
+                     Source="menub_aspert.png"/>
+        <!-- Fondo -->
+        <Image Grid.Row="1"
+               Aspect="Fill"
+               Source="bg4_aspert.png"/>
+        <!-- Contenido -->
+        <ScrollView Grid.Row="1">
+            <Grid Margin="20"
+                  RowDefinitions="Auto,5,Auto,*,150">
+                <Frame BackgroundColor="{StaticResource Purple}">
+                    <Label FontAttributes="Bold"
+                           HorizontalTextAlignment="Center"
+                           Text="TEST"
+                           TextColor="White"
+                           VerticalTextAlignment="Center">
+                    </Label>
+                </Frame>
+                <Frame Grid.Row="2" 
+                       BorderColor="{StaticResource Purple}" 
+                       BackgroundColor="#EFEDED"
+                       CornerRadius="5">
+                    <aspert:JustifiedLabel
+                        x:Name="label"
+                        FontSize="Small"
+                        Padding="25"
+                        Text="1. ¿Le resulta fácil participar en los juegos con otros niños?"/>
+                </Frame>
+                <!-- Botones y columnas -->
+                <Grid Grid.Row="4"
+                      ColumnDefinitions="Auto,*,Auto" 
+                      RowDefinitions="*,Auto,5,Auto,*">
+                    <Grid.Resources>
+                        <Style TargetType="{Type Button}">
+                            <Setter Property="FontAttributes"
+                                    Value="Bold"/>
+                            <Setter Property="TextColor"
+                                    Value="White"/>
+                            <Setter Property="WidthRequest"
+                                    Value="150"/>
+                            <Setter Property="HorizontalOptions"
+                                    Value="Center"/>
+                        </Style>
+                    </Grid.Resources>
+                    <Button Grid.Column="0"
+                            Grid.Row="4"  
+                            BackgroundColor="{StaticResource Purple}"
+                            Command="{Binding No}"
+                            CommandParameter="{Reference label}"
+                            Text="No"/>
+                    <Button Grid.Column="2"
+                            Grid.Row="4"
+                            BackgroundColor="{StaticResource Purple}"
+                            Command="{Binding Yes}"
+                            CommandParameter="{Reference label}"
+                            Text="Sí"/>
+                </Grid>
+            </Grid>
+        </ScrollView>
+        <!-- Footer -->
+        <ImageButton Grid.Row="2"
+                     BackgroundColor="Transparent"
+                     Command="{Binding Back}"
+                     HorizontalOptions="Start"
+                     Padding="10"
+                     Source="back_aspert.png"/>
+        <ImageButton Grid.Row="2"             
+                     BackgroundColor="Transparent"
+                     Command="{Binding Push}"
+                     CommandParameter="{Type aspert:ConfigurationPage}"
+                     HorizontalOptions="End"
+                     Margin="5,0,5,5"
+                     Source="user_aspert.png"/>
+    </Grid>
 </ContentPage>
