--- a/Aspert/Aspert/TestPage.xaml
+++ b/Aspert/Aspert/TestPage.xaml
@@ -24,57 +24,34 @@
                Source="bg4_aspert.png"/>
         <!-- Contenido -->
         <ScrollView Grid.Row="1">
-            <StackLayout Margin="20">
-                <!-- cuadrito maldito -->
-                <Frame BackgroundColor="{StaticResource Purple}"
-                      WidthRequest="100">
-                    <Label HorizontalTextAlignment="Center"
-                        TextColor="White"
-                        FontAttributes="Bold"
-                        Text="INFO">
+            <Grid Margin="20"
+                  RowDefinitions="*,5,Auto,*,*">
+                <Frame BackgroundColor="{StaticResource Purple}">
+                    <Label FontAttributes="Bold"
+                           HorizontalTextAlignment="Center"
+                           Text="INFO"
+                           TextColor="White"
+                           VerticalTextAlignment="Center">
                     </Label>
                 </Frame>
-                <!-- Fin del cuadrito maldito -->
-                <Frame BorderColor="{StaticResource Purple}" 
+                <Frame Grid.Row="2" 
+                       BorderColor="{StaticResource Purple}" 
                        BackgroundColor="#EFEDED"
                        CornerRadius="5">
-                    <Label x:Name="lbl" 
-                           LineBreakMode="WordWrap"
-                           Padding="25"
-                           FontSize="Small"
-                           Text="El Test Infantil del Síndrome de Asperger ha demostrado ser útil en la identificación temprana de niños, entre edades comprendidas entre los cuatro y los once años, cuyos comportamientos sugieren un alto riesgo de presencia de un síndrome de Asperger. Cada pregunta puede proporcionar 0 o 1 puntos, pero hay seis preguntas que no puntuan. Por tanto, la puntuación máxima posible es de 31 puntos. Una puntuación total de 15 o superior sería indicativa de la presencia de comportamientos que justificarían realizar una valoración diagnóstica por parte de un profesional de la salud."/>
+                    <aspert:JustifiedLabel 
+                        x:Name="lbl" 
+                        Padding="25"
+                        FontSize="Small"
+                        Text="El Test Infantil del Síndrome de Asperger ha demostrado ser útil en la identificación temprana de niños, entre edades comprendidas entre los cuatro y los once años, cuyos comportamientos sugieren un alto riesgo de presencia de un síndrome de Asperger. Cada pregunta puede proporcionar 0 o 1 puntos, pero hay seis preguntas que no puntuan. Por tanto, la puntuación máxima posible es de 31 puntos. Una puntuación total de 15 o superior sería indicativa de la presencia de comportamientos que justificarían realizar una valoración diagnóstica por parte de un profesional de la salud."/>
                 </Frame>
-                <!-- Botones y columnas -->
-                <Grid Grid.Row="3"
-                      ColumnDefinitions="*,Auto,50,Auto,*" 
-                      RowDefinitions="*,Auto,5,Auto,*">
-                    <Grid.Resources>
-                        <Style TargetType="{Type Button}">
-                            <Setter Property="FontAttributes"
-                                    Value="Bold"/>
-                            <Setter Property="TextColor"
-                                    Value="White"/>
-                            <Setter Property="HeightRequest"
-                                    Value="70"/>
-                            <Setter Property="WidthRequest"
-                                    Value="100"/>
-                        </Style>
-                    </Grid.Resources>
-                    <Button x:Name="btn" 
-                            Grid.Column="1"
-                            Grid.Row="4"  
-                            BackgroundColor="{StaticResource Purple}"
-                            Clicked="OnBtnClicked"
-                            Text="Empezar Test"/>
-                    <Button x:Name="btn2" 
-                            Grid.Column="3"
-                            Grid.Row="4"
-                            BackgroundColor="{StaticResource Purple}"
-                            Clicked="OnBtnClicked"
-                            Text="CANCELAR"/>
-                </Grid>
-                <!-- Fin Botones y columnas -->
-            </StackLayout>
+                <Button Grid.Row="4"  
+                        BackgroundColor="{StaticResource Purple}"
+                        Command="{Binding Push}"
+                        CommandParameter="{Type aspert:QuestionPage}"
+                        FontAttributes="Bold"
+                        Text="Empezar Test"
+                        TextColor="White"/>
+            </Grid>
         </ScrollView>
         <!-- Footer -->
         <ImageButton Grid.Row="2"
